# consulting-deck-plugin

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
references/: chart-selection.md  principles.md  visual-metaphors.md
scripts/: assembly.py  utils.py
scripts/charts/: agenda.py  bubble_matrix.py  driver_tree.py  harvey_balls.py  spider_radar.py  stacked_bar.py  stakeholder_quotes.py  timeline_bars.py  waterfall.py  waterfall_flow.py
skills/consulting-deck/: SKILL.md
skills/deck-assembly/: SKILL.md
skills/slide-templates/: SKILL.md
tests/: test_agenda.py  test_assembly.py  test_bubble_matrix.py  test_driver_tree.py  test_harvey_balls.py  test_spider_radar.py  test_stacked_bar.py  test_stakeholder_quotes.py  test_timeline_bars.py  test_utils.py  test_waterfall.py  test_waterfall_flow.py
themes/: default.yaml
